--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,1 +1,5 @@
-<p>display works!</p>
+<div class="row mt-3">
+    <div class="col">
+       <p> Content will be displayed here : {{munchItData.userName}} </p>
+    </div>
+  </div>
