may need to rethink architecture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </div>
   
   
-      <app-form (munchItEvent)="munchItDisplay($event)"></app-form>
+      <app-form (munchItEvent)="munchItPush($event)"></app-form>
   
 
  
