--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-3">
     <div class="col">
-       <p> Content will be displayed here : {{munchItData.userName}} </p>
+       <p> Content will be displayed here :</p>
     </div>
   </div>
