Progressed 50% on Front End

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   
 
  
-      <app-display [munchItData] = "munchItData"></app-display>
+      <app-display  [munchItData] = "munchItData1"></app-display>
  
 
   </div>
