--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   
 
  
-      <app-display  [munchItData] = "munchItData1"></app-display>
+      <app-display  (munchItDataAdded)= "getDisplayData($event)"></app-display>
  
 
   </div>
