--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,11 @@
   </div>
   
   
-      <app-form (munchItEvent)="munchItPush($event)"></app-form>
+      <app-form></app-form>
   
 
  
-      <app-display  (munchItDataAdded)= "getDisplayData($event)"></app-display>
+      <app-display></app-display>
  
 
   </div>
